--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -43,11 +43,19 @@
   width: 60vw;
   justify-content: end;
   margin-right: 2rem;
+  margin-top: 7px;
 }
 
-/* .nav-item {
-  height: 80px;
-} */
+.nav-item-button {
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  grid-gap: 10px;
+  list-style: none;
+  text-align: center;
+  width: 60vw;
+  justify-content: end;
+  margin-right: 2rem;
+}
 
 .nav-links {
   color: #fff;
