--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -21,7 +21,7 @@ video {
 .hero-container > h1 {
   color: #fff;
   font-size: 100px;
-  margin-top: -100px;
+  margin-top: 100px;
 }
 
 .hero-container > p {
@@ -69,5 +69,9 @@ video {
 
   .btn {
     width: 100%;
+  }
+
+  .btn-mobile {
+    width: 25%;
   }
 }
