--- a/src/components/FavTeam/FavTeam.css
+++ b/src/components/FavTeam/FavTeam.css
@@ -3,6 +3,60 @@
   /* background-color: black; */
   width: 650px;
 }
+.bodyFav{
+
+    height: 100vh;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
+   
+  
+}
+.tableFav{
+
+  
+}
+
+.ETc {
+  padding: 1rem 2rem;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  font-size: 1rem;
+  font-weight: 900;
+
+}
+.ETc1 {
+  padding: 1rem 2rem;
+ 
+}
+
+.status {
+  border-radius:  0.2rem;
+  background-color: red;
+  padding: 0.2rem 1rem;
+  text-align: center;
+}
+ .status-pending {
+    background-color: #fff0c2;
+    color: #a68b00;
+  }
+   .status-paid {
+    background-color: #c8e6c9;
+    color:  #388e3c;
+  }
+    .status-unpaid {
+    background-color: #ffcdd2;
+    color: #c62828;
+  }
+.amount {
+  text-align: right;
+}
+.favC:nth-child(even) {
+  background-color: #f4f6fb;
+ 
+}
+
 .desForm {
   margin: 0px auto 0px 0%;
 }
@@ -64,11 +118,4 @@
   width: 130px;
   height: 50px;
   font-size: 20px;
-}
-.style{
-  color: black;
-  font-weight: bolder;
-  border:5px solid black;
- 
-  text-align: center;
 }
